# zora_vm

./: .dockerignore  .gitignore  BUILD_SUMMARY.md  CMakeLists.txt  CMakeLists_complex.txt.bak  Dockerfile  Dockerfile.dockerfile  HelloWorld.java  LICENSE  Launch_ZoraVM_Enhanced.bat  Launch_ZoraVM_WT.bat  QoL_Features_Summary.md  README.md  RELEASE_AUTOMATION.md  TERMINAL_ENHANCEMENTS.md  UNIX_INTEGRATION_COMPLETE.md  ZoraVm.lnk  build-docker.bat  build-docker.sh  build_release.bat  build_verbose.bat  build_zora_vm.bat  build_zora_vm.sh  check_dependencies.sh  commands-to-check-or-implement.txt  create_distribution.bat  debug_launch.bat  docker-compose.yml  fix_dependencies.sh  process_commands_fixed.txt  quick_test.txt  reboot_test.txt  resources.rc  system_check.bat  test_output.txt  test_reboot.bat  test_reboot_mechanism.c  test_release_build.sh  test_shell_comprehensive.bat  test_standalone.bat  (+1 more)
.github/: FUNDING.yml
.github/workflows/: docker.yml  release.yml
MERL/: color-and-test.c  color-and-test.h  config.h  crash.c  crash.h  kernel.c  kernel.h  merl_main.c  shell.c  shell.h  shell_script.c  shell_script.h  system_commands.c  tetra.c  tetra.h  user.c  user.h  utils.c  utils.h
include/: cpu.h  device.h  i18n.h  kernel.h  memory.h  merl.h  sandbox.h  unix_core.h  version.h  vm.h  zoraperl.h
include/binary/: binary_executor.h  elf_parser.h
include/desktop/: desktop.h
include/editors/: zora_editor.h
include/kernel/: init.h  interrupts.h  java_detector.h  mmu.h  network_stack.h  privilege.h  scheduler.h  syscall_table.h  system_monitor.h
include/lua/: lua_vm.h
include/meisei/: virtual_silicon.h
include/network/: network.h  network_advanced.h
include/package/: package_manager.h
include/perl/: perl_vm.h
include/platform/: platform.h
include/python/: python_vm.h
include/scripting/: script_engine.h
include/syscall/: syscall.h
include/system/: disk.h  process.h  process_real.h  system_services.h
include/terminal/: terminal_detector.h  terminal_style.h  zora_tui.h
include/unix_core/: unix_compiler.h  unix_directories.h  unix_embedded_compiler.h  unix_games.h  unix_games_hangman.h  unix_games_snake.h  unix_games_tetris.h  unix_ipc.h  unix_textproc.h
include/vfs/: vfs.h
include/virtualization/: virtualization.h
src/: i18n.c  main.c
src/binary/: binary_executor.c  elf_parser.c
src/binary/linux/: binary_executor_linux.c  elf_parser_linux.c
src/binary/windows/: binary_executor_win.c  elf_parser_win.c
src/cpu/: cpu.c
src/desktop/: desktop.c
src/device/: device.c
src/devices/: device.c
src/editors/: zora_editor.c
src/kernel/: init.c  interrupts.c  java_detector.c  kernel.c  mmu.c  network_stack.c  privilege.c  scheduler.c  syscall_table.c  system_monitor.c
src/lua/: lua_vm.c
src/meisei/: script_accelerator.c  virtual_silicon.c
src/memory/: memory.c
src/merl/: merl_vm.c
src/network/: network.c  network_advanced.c  network_commands.c
src/package/: package_commands.c  package_manager.c
src/perl/: perl_vm.c
src/python/: python_vm.c
src/sandbox/: sandbox.c  syscall_filter.c
src/sandbox/linux/: sandbox_linux.c  syscall_filter_linux.c
src/sandbox/windows/: sandbox_win.c  syscall_filter_win.c
src/shell_commands/: system_commands.c
src/syscall/: syscall.c
src/system/: disk.c  process.c  process_real.c
src/terminal/: terminal_detector.c  terminal_style.c  zora_tui.c
src/unix_core/: unix_compiler.c  unix_core.c  unix_directories.c  unix_embedded_compiler.c  unix_games.c  unix_games_hangman.c  unix_games_snake.c  unix_ipc.c  unix_textproc.c
src/vfs/: vfs.c
src/virtualization/: virtualization.c
src/zoraperl/: vfs.c  zoraperl.c
